<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>picknik_reset_fault_controller</name>
  <version>0.0.4</version>
  <description>
    ROS 2 controller that offers a service to clear faults in a hardware interface
  </description>
  <author email="lovro.ivanov@gmail.com">lovro</author>
  <maintainer email="alex.moriarty@picknik.ai">Alex Moriarty</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>realtime_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
