<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>picknik_twist_controller</name>
  <version>0.0.0</version>
  <description>Subscribes to twist msg and forwards to hardware</description>
  <maintainer email="lovro.ivanov@gmail.com">lovro</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>realtime_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
